KL-58/chore: modify ESLint rules, add new packages
개발 시 불편함을 야기하는 ESLint 규칙을 수정하였습니다.
개발에 필요한 새로운 패키지를 추가하였습니다. (react-icons, prop-types, axios)

react-icons: 다양한 아이콘을 컴포넌트로 삽입할 수 있습니다.
prop-types: 컴포넌트의 props에 type을 명시하여 경고 메세지를 띄울 수 있습니다.
axios: 비동기 HTTP 요청을 쉽게 처리할 수 있습니다. JSON 데이터를 자동으로 변환해줍니다.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,10 @@
   },
   "extends": ["eslint:recommended", "airbnb", "plugin:prettier/recommended"],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "no-alert": "off",
+    "no-console": "off",
+    "react/jsx-filename-extension": [1, { "extensions": [".jsx"] }],
+    "react/require-default-props": "off",
+    "jsx-a11y/alt-text": ["off"]
   }
 }
