--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
+    "reset-css": "^5.0.2",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
