--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "flickity": "2.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flickity-component": "^4.0.7",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
