--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.19.4",
+    "antd": "^5.19.3",
     "axios": "^1.7.2",
     "flickity": "2.3.0",
     "prop-types": "^15.8.1",
@@ -20,6 +20,7 @@
     "react-transition-group": "^4.4.5",
     "reset-css": "^5.0.2",
     "styled-components": "^6.1.11",
+    "use-axios-client": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
