--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.19.3",
     "axios": "^1.7.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -15,6 +16,7 @@
     "react-scripts": "5.0.1",
     "reset-css": "^5.0.2",
     "styled-components": "^6.1.11",
+    "use-axios-client": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
