KL-101/chore: add pakage (antd, antdicon)
- antd, antd 아이콘 추가

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
     "no-console": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/require-default-props": "off",
-    "jsx-a11y/alt-text": ["off"]
+    "jsx-a11y/alt-text": "off",
+    "guard-for-in": "off",
+    "no-plusplus": "off"
   }
 }
