--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.19.4",
     "axios": "^1.7.2",
     "flickity": "2.3.0",
     "prop-types": "^15.8.1",
@@ -15,6 +16,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "reset-css": "^5.0.2",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
