--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
   "prettier.prettierPath": ".yarn/sdks/prettier/index.cjs",
   "editor.tabSize": 2,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "px-to-rem.px-per-rem": 16
+  "px-to-rem.px-per-rem": 16,
+  "cSpell.words": ["antd"]
 }
