--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
   },
   "eslint.nodePath": ".yarn/sdks",
   "prettier.prettierPath": ".yarn/sdks/prettier/index.cjs",
-  "px-to-rem.px-per-rem": 16
+  "px-to-rem.px-per-rem": 16,
+  "cSpell.words": ["antd"]
 }
