--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-transition-group": "^4.4.5",
     "reset-css": "^5.0.2",
     "styled-components": "^6.1.11",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
