--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.19.4",
     "axios": "^1.7.2",
     "flickity": "2.3.0",
+    "lodash-es": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
