--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-node_modules
+# vscode
+.vscode/
 
+# dependencies
 .yarn/*
 !.yarn/cache
 !.yarn/patches
