--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,24 @@
     "jsx-a11y/alt-text": "off",
     "guard-for-in": "off",
     "no-plusplus": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "alias": {
+        "map": [
+          ["@", "./src"],
+          ["@components", "./src/components"],
+          ["@constants", "./src/constants"],
+          ["@hooks", "./src/hooks"],
+          ["@images", "./src/images"],
+          ["@loader", "./src/loader"],
+          ["@pages", "./src/pages"],
+          ["@stores", "./src/stores"],
+          ["@styles", "./src/styles"],
+          ["@utils", "./src/utils"]
+        ],
+        "extensions": [".js", ".jsx"]
+      }
+    }
   }
 }
