--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
     "@ant-design/icons": "^5.4.0",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.1",
-    "axios": "^1.7.4",
     "flickity": "2.3.0",
     "ky": "^1.5.0",
     "lodash-es": "^4.17.21",
@@ -21,8 +17,6 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.0",
     "styled-components": "^6.1.11",
-    "use-axios-client": "^2.0.0",
-    "web-vitals": "^2.1.4",
     "zustand": "^4.5.4"
   },
   "scripts": {
@@ -55,7 +49,8 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "prettier": "3.3.2",
-    "vite": "^5.4.6"
+    "vite": "^5.4.6",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "packageManager": "yarn@4.5.0"
 }
